--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             </p>
             <ul class="mb-10 flex flex-wrap items-center justify-center gap-5">
               <li>
-                <a href="https://links.tailgrids.com/play-download"
+                <a href=""
                   class="inline-flex items-center justify-center rounded-md bg-white px-7 py-[14px] text-center text-base font-medium text-dark shadow-1 transition duration-300 ease-in-out hover:bg-gray-2 hover:text-body-color">
                   Скачать мобильное приложение
                 </a>
