--- a/privacy.html
+++ b/privacy.html
@@ -26,7 +26,7 @@
     <div class="relative -mx-4 flex items-center justify-between">
       <div class="w-60 max-w-full px-4">
         <a href="index.html" class="navbar-logo block w-full py-5 text-white text-3xl">
-          Nomolytica
+          Nomalytica
         </a>
       </div>
       <div class="flex w-full items-center justify-between px-4">
@@ -266,12 +266,12 @@
               Настоящая Политика конфиденциальности и обработки персональных
               данных (далее – «Политика конфиденциальности») является публичным
               Договором, заключенным между владельцем мобильного приложения -
-              ИП«Nomolytica» (далее «Nomolytica») и «Пользователем». Настоящая
+              ИП«Nomalytica» (далее Nomalytica) и «Пользователем». Настоящая
               Политика составлена в соответствии с требованиями Закона Республики
               Казахстан от 21 мая 2013 года No 94-V «О персональных данных и их
               защите» и определяет порядок обработки персональных данных и меры по
               обеспечению безопасности персональных данных, и действует в
-              отношении всей информации, которую Nomolytica может получить о
+              отношении всей информации, которую Nomalytica может получить о
               Пользователе во время использования сайта.
               <br />
               <br />
@@ -279,11 +279,11 @@
               <br />
               Настоящая Политика конфиденциальности содержит следующие термины и
               определения: «Мобильное приложение» - приложение, расположенный в
-              сети Интернет по адресу Nomolytica Все исключительные права на
+              сети Интернет по адресу Nomalytica Все исключительные права на
               Сайт и его отдельные элементы (включая программное обеспечение,
-              дизайн) принадлежат Nomolytica в полном объеме. «Администрация
+              дизайн) принадлежат Nomalytica в полном объеме. «Администрация
               приложения» - уполномоченные сотрудники на управление Сайтом,
-              действующие от имени ИП «Nomolytica», организующие и (или)
+              действующие от имени ИП «Nomalytica», организующие и (или)
               осуществляющие обработку персональных данных, а также определяющие
               цели обработки персональных данных, состав персональных данных,
               подлежащих обработке, действия (операции), совершаемые с
@@ -307,9 +307,9 @@
               приложении, путем указания необходимых сведений и отправки
               сканированных документов. «Регистрационная форма» - форма,
               расположенная на Сайте, которую Пользователь должен заполнить для
-              возможности использования сайта в полном объеме. «Nomolytica» -
+              возможности использования сайта в полном объеме. «Nomalytica» -
               владелец Мобильного приложения (ссылка на приложение в AppStore) –
-              ИП«Nomolytica» «Cookies» - фрагмент данных, отправленный веб-сервером и
+              ИП«Nomalytica» «Cookies» - фрагмент данных, отправленный веб-сервером и
               хранимый на компьютере Пользователя, который веб-клиент или
               веб-браузер каждый раз пересылает веб-серверу в HTTP-запросе при
               попытке открыть страницу Мобильного приложения. «IP-адрес» -
@@ -331,8 +331,8 @@
               Пользователь может перейти по ссылкам, доступным в Мобильном
               приложении.
               <br />
-              2.3 Nomolytica не проверяет достоверность персональных данных,
-              предоставляемых Пользователем. Однако, Nomolytica исходит из того,
+              2.3 Nomalytica не проверяет достоверность персональных данных,
+              предоставляемых Пользователем. Однако, Nomalytica исходит из того,
               что Пользователь предоставляет достоверные персональные данные и
               поддерживает эти данные в актуальном состоянии. Всю ответственность,
               а также возможные последствия за предоставление недостоверных или не
@@ -386,12 +386,12 @@
               обработки персональных данных пользователей
               <br />
               <br />
-              4.1. Nomolytica собирает, обрабатывает и хранит только те
+              4.1. Nomalytica собирает, обрабатывает и хранит только те
               персональные данные, которые необходимы для предоставления Сервисов
               и/или приобретения Пользователем товара из каталога
               интернет-магазина.
               <br />
-              4.2. Персональные данные Пользователя Nomolytica использует в
+              4.2. Персональные данные Пользователя Nomalytica использует в
               целях:
               <br />
               4.2.1. идентификации Пользователя для оформления заказа и/или
@@ -409,7 +409,7 @@
               приложения, оказания услуг, а также обработки запросов и заявок от
               Пользователя;
               <br />
-              4.2. Персональные данные Пользователя Nomolytica использует в
+              4.2. Персональные данные Пользователя Nomalytica использует в
               целях:
               <br />
               <br />
@@ -589,7 +589,7 @@
               10.3. Пользователи вправе направлять Администрации приложения свои
               запросы, в том числе запросы относительно использования их
               персональных данных в письменной форме по электронному адресу:
-              support@nomolytica.kz
+              support@nomalytica.kz
               <br />
               10.4. Запрос, направляемый Пользователем, должен соответствовать
               требованиям подачи обращений в Службу сервиса и поддержки, а именно
