--- a/index.html
+++ b/index.html
@@ -1184,7 +1184,7 @@
             <ul class="inline-flex gap-8">
               <li class="">
                 <a href="terms.html" class="mb-3 inline-block text-base text-gray-7 hover:text-primary text-nowrap">
-                  Правила пользования
+                  Публичная оферта
                 </a>
               </li>
               <li>
