--- a/index.html
+++ b/index.html
@@ -184,12 +184,8 @@
               </span>
             </label>
             <div class="hidden sm:flex">
-              <a href="" class="loginBtn px-[22px] py-2 text-base font-medium text-white hover:opacity-70">
+              <a href="https://nomalytics-romantic.netlify.app" class="loginBtn px-[22px] py-2 text-base font-medium text-white hover:opacity-70">
                 Войти
-              </a>
-              <a href=""
-                class="signUpBtn rounded-md bg-white bg-opacity-20 px-6 py-2 text-base font-medium text-white duration-300 ease-in-out hover:bg-opacity-100 hover:text-dark">
-                Зарегистрироваться
               </a>
             </div>
           </div>
@@ -220,7 +216,7 @@
                 </a>
               </li>
               <li>
-                <a href="" target="_blank"
+                <a href="https://nomalytics-romantic.netlify.app" target="_blank"
                   class="flex items-center gap-4 rounded-md bg-white/[0.12] px-6 py-[14px] text-base font-medium text-white transition duration-300 ease-in-out hover:bg-white hover:text-dark">
                   Зайти в веб-приложение
                 </a>
@@ -427,60 +423,7 @@
           </div>
         </div>
       </div>
-      <div class="-mx-4 flex flex-wrap">
-        <div class="w-full px-4 md:w-1/2 lg:w-1/4">
-          <div class="wow fadeInUp group mb-12" data-wow-delay=".1s">
-            <div
-              class="relative z-10 mb-10 flex h-[70px] w-[70px] items-center justify-center rounded-[14px] bg-primary">
-              <span
-                class="absolute left-0 top-0 -z-[1] mb-8 flex h-[70px] w-[70px] rotate-[25deg] items-center justify-center rounded-[14px] bg-primary bg-opacity-20 duration-300 group-hover:rotate-45"></span>
-              <svg width="37" height="37" viewBox="0 0 37 37" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M30.5801 8.30514H27.9926C28.6113 7.85514 29.1176 7.34889 29.3426 6.73014C29.6801 5.88639 29.6801 4.48014 27.9363 2.84889C26.0801 1.04889 24.3926 1.04889 23.3238 1.33014C20.9051 1.94889 19.2738 4.76139 18.3738 6.78639C17.4738 4.76139 15.8426 2.00514 13.4238 1.33014C12.3551 1.04889 10.6676 1.10514 8.81133 2.84889C7.06758 4.53639 7.12383 5.88639 7.40508 6.73014C7.63008 7.34889 8.13633 7.85514 8.75508 8.30514H5.71758C4.08633 8.30514 2.73633 9.65514 2.73633 11.2864V14.9989C2.73633 16.5739 4.03008 17.8676 5.60508 17.9239V31.6489C5.60508 33.5614 7.18008 35.1926 9.14883 35.1926H27.5426C29.4551 35.1926 31.0863 33.6176 31.0863 31.6489V17.8676C32.4926 17.6426 33.5613 16.4051 33.5613 14.9426V11.2301C33.5613 9.59889 32.2113 8.30514 30.5801 8.30514ZM23.9426 3.69264C23.9988 3.69264 24.1676 3.63639 24.3363 3.63639C24.7301 3.63639 25.3488 3.80514 26.1926 4.59264C26.8676 5.21139 27.0363 5.66139 26.9801 5.77389C26.6988 6.56139 23.8863 7.40514 20.6801 7.74264C21.4676 5.99889 22.6488 4.03014 23.9426 3.69264ZM10.4988 4.64889C11.3426 3.86139 11.9613 3.69264 12.3551 3.69264C12.5238 3.69264 12.6363 3.74889 12.7488 3.74889C14.0426 4.08639 15.2801 5.99889 16.0676 7.79889C12.8613 7.46139 10.0488 6.61764 9.76758 5.83014C9.71133 5.66139 9.88008 5.26764 10.4988 4.64889ZM5.26758 14.9426V11.2301C5.26758 11.0051 5.43633 10.7801 5.71758 10.7801H30.5801C30.8051 10.7801 31.0301 10.9489 31.0301 11.2301V14.9426C31.0301 15.1676 30.8613 15.3926 30.5801 15.3926H5.71758C5.49258 15.3926 5.26758 15.2239 5.26758 14.9426ZM27.5426 32.6614H9.14883C8.58633 32.6614 8.13633 32.2114 8.13633 31.6489V17.9239H28.4988V31.6489C28.5551 32.2114 28.1051 32.6614 27.5426 32.6614Z"
-                  fill="white" />
-              </svg>
-            </div>
-            <h4 class="mb-3 text-xl font-bold text-dark dark:text-white">
-              Формирование отчетов
-            </h4>
-            <p class="mb-8 text-body-color dark:text-dark-6 lg:mb-9">
-              Автоматизируйте процесс формирования отчетов.
-            </p>
-            <!-- <a
-                href="javascript:void(0)"
-                class="text-base font-medium text-dark hover:text-primary dark:text-white dark:hover:text-primary"
-              >
-                Узнать больше
-              </a> -->
-          </div>
-        </div>
-        <div class="w-full px-4 md:w-1/2 lg:w-1/4">
-          <div class="wow fadeInUp group mb-12" data-wow-delay=".15s">
-            <div
-              class="relative z-10 mb-10 flex h-[70px] w-[70px] items-center justify-center rounded-[14px] bg-primary">
-              <span
-                class="absolute left-0 top-0 -z-[1] mb-8 flex h-[70px] w-[70px] rotate-[25deg] items-center justify-center rounded-[14px] bg-primary bg-opacity-20 duration-300 group-hover:rotate-45"></span>
-              <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M30.5998 1.01245H5.39981C2.98105 1.01245 0.956055 2.9812 0.956055 5.4562V30.6562C0.956055 33.075 2.9248 35.0437 5.39981 35.0437H30.5998C33.0186 35.0437 34.9873 33.075 34.9873 30.6562V5.39995C34.9873 2.9812 33.0186 1.01245 30.5998 1.01245ZM5.39981 3.48745H30.5998C31.6123 3.48745 32.4561 4.3312 32.4561 5.39995V11.1937H3.4873V5.39995C3.4873 4.38745 4.38731 3.48745 5.39981 3.48745ZM3.4873 30.6V13.725H23.0623V32.5125H5.39981C4.38731 32.5125 3.4873 31.6125 3.4873 30.6ZM30.5998 32.5125H25.5373V13.725H32.4561V30.6C32.5123 31.6125 31.6123 32.5125 30.5998 32.5125Z"
-                  fill="white" />
-              </svg>
-            </div>
-            <h4 class="mb-3 text-xl font-bold text-dark dark:text-white">
-              Продуктивность
-            </h4>
-            <p class="mb-8 text-body-color dark:text-dark-6 lg:mb-9">
-              Повышайте продуктивность ваших сотрудников с помощью эффективных инструментов для отслеживания выполнения
-              задач и оптимизации рабочего времени.
-            </p>
-            <!-- <a
-                href="javascript:void(0)"
-                class="text-base font-medium text-dark hover:text-primary dark:text-white dark:hover:text-primary"
-              >
-                Learn More
-              </a> -->
-          </div>
-        </div>
+      <div class="-mx-4 flex flex-wrap justify-center">
         <div class="w-full px-4 md:w-1/2 lg:w-1/4">
           <div class="wow fadeInUp group mb-12" data-wow-delay=".2s">
             <div
@@ -519,6 +462,32 @@
             </div>
             <h4 class="mb-3 text-xl font-bold text-dark dark:text-white">
               Принятие решений
+            </h4>
+            <p class="mb-8 text-body-color dark:text-dark-6 lg:mb-9">
+              Все свежие данные о вашем бизнесе и показателях всегда под рукой которые помогут вам управлять вашими финансами. Безопасное облачное хранилище данных, гарантирующее конфиденциальность.
+            </p>
+            <!-- <a
+                href="javascript:void(0)"
+                class="text-base font-medium text-dark hover:text-primary dark:text-white dark:hover:text-primary"
+              >
+                Learn More
+              </a> -->
+          </div>
+        </div>
+        <div class="w-full px-4 md:w-1/2 lg:w-1/4">
+          <div class="wow fadeInUp group mb-12" data-wow-delay=".15s">
+            <div
+              class="relative z-10 mb-10 flex h-[70px] w-[70px] items-center justify-center rounded-[14px] bg-primary">
+              <span
+                class="absolute left-0 top-0 -z-[1] mb-8 flex h-[70px] w-[70px] rotate-[25deg] items-center justify-center rounded-[14px] bg-primary bg-opacity-20 duration-300 group-hover:rotate-45"></span>
+              <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M30.5998 1.01245H5.39981C2.98105 1.01245 0.956055 2.9812 0.956055 5.4562V30.6562C0.956055 33.075 2.9248 35.0437 5.39981 35.0437H30.5998C33.0186 35.0437 34.9873 33.075 34.9873 30.6562V5.39995C34.9873 2.9812 33.0186 1.01245 30.5998 1.01245ZM5.39981 3.48745H30.5998C31.6123 3.48745 32.4561 4.3312 32.4561 5.39995V11.1937H3.4873V5.39995C3.4873 4.38745 4.38731 3.48745 5.39981 3.48745ZM3.4873 30.6V13.725H23.0623V32.5125H5.39981C4.38731 32.5125 3.4873 31.6125 3.4873 30.6ZM30.5998 32.5125H25.5373V13.725H32.4561V30.6C32.5123 31.6125 31.6123 32.5125 30.5998 32.5125Z"
+                  fill="white" />
+              </svg>
+            </div>
+            <h4 class="mb-3 text-xl font-bold text-dark dark:text-white">
+              Продуктивность
             </h4>
             <p class="mb-8 text-body-color dark:text-dark-6 lg:mb-9">
               Повышайте продуктивность ваших сотрудников с помощью эффективных инструментов для отслеживания выполнения
@@ -944,23 +913,6 @@
   </section>
 
   <section class="relative z-20 overflow-hidden bg-white pb-8 pt-0 dark:bg-dark lg:pb-[50px]">
-    <div class="container mx-auto">
-      <div class="-mx-4 flex flex-wrap">
-        <div class="w-full px-4">
-          <div class="mx-auto mb-[60px] max-w-[520px] text-center">
-            <!-- <span class="mb-2 block text-lg font-semibold text-primary">
-                FAQ
-              </span> -->
-            <h2 class="mb-3 text-3xl font-bold leading-[1.2] text-dark dark:text-white sm:text-4xl md:text-[40px]">
-              Есть вопросы?
-            </h2>
-            <p class="mx-auto max-w-[485px] text-base text-body-color dark:text-dark-6">
-              Напишите нам
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
     <div>
       <span class="absolute left-4 top-4 -z-[1]">
         <svg width="48" height="134" viewBox="0 0 48 134" fill="none" xmlns="http://www.w3.org/2000/svg">
