--- a/index.html
+++ b/index.html
@@ -210,15 +210,15 @@
             </p>
             <ul class="mb-10 flex flex-wrap items-center justify-center gap-5">
               <li>
-                <a href=""
+                <a href="https://nomalytics-romantic.netlify.app"
                   class="inline-flex items-center justify-center rounded-md bg-white px-7 py-[14px] text-center text-base font-medium text-dark shadow-1 transition duration-300 ease-in-out hover:bg-gray-2 hover:text-body-color">
-                  Скачать мобильное приложение
+                  Зайти в веб-приложение
                 </a>
               </li>
               <li>
-                <a href="https://nomalytics-romantic.netlify.app" target="_blank"
+                <a href="" target="_blank"
                   class="flex items-center gap-4 rounded-md bg-white/[0.12] px-6 py-[14px] text-base font-medium text-white transition duration-300 ease-in-out hover:bg-white hover:text-dark">
-                  Зайти в веб-приложение
+                  Скачать мобильное приложение
                 </a>
               </li>
             </ul>
