--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 </a>
               </li>
               <li>
-                <a href="" target="_blank"
+                <a href="https://apps.apple.com/kz/app/nomalytica/id6739706064" target="_blank"
                   class="flex items-center gap-4 rounded-md bg-white/[0.12] px-6 py-[14px] text-base font-medium text-white transition duration-300 ease-in-out hover:bg-white hover:text-dark">
                   Скачать мобильное приложение
                 </a>
