--- a/index.html
+++ b/index.html
@@ -543,11 +543,11 @@
   <!-- ====== Features Section End -->
 
   <!-- ====== About Section Start -->
-  <section id="about" class="bg-gray-1 pb-8 pt-20 dark:bg-dark-2 lg:pb-[70px] lg:pt-[120px]">
+  <!-- <section id="about" class="bg-gray-1 pb-8 pt-20 dark:bg-dark-2 lg:pb-[70px] lg:pt-[120px]">
     <div class="container">
       <div class="wow fadeInUp" data-wow-delay=".2s">
-        <div class="-mx-4 flex flex-wrap items-center">
-          <div class="w-full px-4 lg:w-1/2">
+        <div class="-mx-4 flex flex-wrap items-center"> -->
+          <!-- <div class="w-full px-4 lg:w-1/2">
             <div class="mb-12 max-w-[540px] lg:mb-0">
               <h2
                 class="mb-5 text-3xl font-bold leading-tight text-dark dark:text-white sm:text-[40px] sm:leading-[1.2]">
@@ -560,7 +560,7 @@
                 <!-- <br />
                   <br />
                   Оптимизируйте бизнес процессы с нами -->
-              </p>
+              <!-- </p> -->
 
               <!-- <a
                   href="javascript:void(0)"
@@ -568,11 +568,11 @@
                 >
                   Know More
                 </a> -->
-            </div>
-          </div>
+            <!-- </div>
+          </div> --> -->
 
-          <div class="w-full px-4 lg:w-1/2">
-            <div class="-mx-2 flex flex-wrap sm:-mx-4 lg:-mx-2 xl:-mx-4">
+          <!-- <div class="w-full px-4 lg:w-1/2">
+            <div class="-mx-2 flex flex-wrap sm:-mx-4 lg:-mx-2 xl:-mx-4"> -->
               <!-- <div class="w-full px-2 sm:w-1/2 sm:px-4 lg:px-2 xl:px-4">
                 <div class="mb-4 sm:mb-8 sm:h-[400px] md:h-[540px] lg:h-[400px] xl:h-[500px]">
                   <img src="./assets/images/about/about-image-01.jpg" alt="about image"
@@ -714,22 +714,22 @@
                     </div>
                   </div> -->
               <!-- </div> -->
-            </div>
+            <!-- </div>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- ====== About Section End -->
 
   <!-- ====== CTA Section Start -->
-  <section class="relative z-10 overflow-hidden bg-primary py-20 lg:py-[115px]">
-    <div class="container mx-auto">
+  <!-- <section class="relative z-10 overflow-hidden bg-primary py-20 lg:py-[115px]"> -->
+    <!-- <div class="container mx-auto">
       <div class="relative overflow-hidden">
         <div class="-mx-4 flex flex-wrap items-stretch">
           <div class="w-full px-4">
             <div class="mx-auto max-w-[570px] text-center">
-              <!-- <h2
+              <h2
                   class="mb-2.5 text-3xl font-bold text-white md:text-[38px] md:leading-[1.44]"
                 >
                   <span>Оставьте заявку на бесплатную консультацию и узнайте, как Nomalytica может улучшить ваше управление бизнесом</span>
@@ -737,19 +737,19 @@
                     Get Started Now
                   </span>
                 </h2> -->
-              <p class="mx-auto mb-6 max-w-[515px] text-base leading-[1.5] text-white">
+              <!-- <p class="mx-auto mb-6 max-w-[515px] text-base leading-[1.5] text-white">
                 Оптимизируйте бизнес процессы с нами
               </p>
               <a href="javascript:void(0)"
                 class="inline-block rounded-md border border-transparent bg-secondary px-7 py-3 text-base font-medium text-white transition hover:bg-[#0BB489]">
-                Оставить заявку
-              </a>
+                Оставить заявку -->
+              <!-- </a>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <div>
+    </div> --> 
+    <!-- <div>
       <span class="absolute left-0 top-0">
         <svg width="495" height="470" viewBox="0 0 495 470" fill="none" xmlns="http://www.w3.org/2000/svg">
           <circle cx="55" cy="442" r="138" stroke="white" stroke-opacity="0.04" stroke-width="50" />
@@ -766,8 +766,8 @@
             stroke-opacity="0.06" stroke-width="13" />
         </svg>
       </span>
-    </div>
-  </section>
+    </div> -->
+  <!-- </section> -->
   <!-- ====== CTA Section End -->
 
   <!-- ====== Pricing Section Start -->
